--- a/github_colab.ipynb
+++ b/github_colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNcGPOLFh2bt0cUATl0e+EH",
+      "authorship_tag": "ABX9TyOzvLWqA5MdDrPgLrQfBIeP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,13 +43,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OiI2UIBmRs3c",
-        "outputId": "5ec9743d-a29d-4abf-f0b9-f06cb7c7168f"
+        "id": "-LKt5FecTbIp",
+        "outputId": "4697851a-f012-4a5f-82e0-1ef8ee8d0407"
       },
       "source": [
-        "In [1]:print(\"Hello Github & Colab\")"
+        "print(\"Hello Github & Colab\")"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
