--- a/List_(2).ipynb
+++ b/List_(2).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "List (2).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ2ZHhSG6A7s0fBCdWbUc7",
+      "authorship_tag": "ABX9TyP7uHwUENPpGtnqgUbuoerv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "list11 = sum (list1)\n",
         "print(list11)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
         "list21 = numpy.prod(list1)\n",
         "print(list21)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "list41 = min(list1)\n",
         "print (list41)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "list2.sort(reverse=False)\n",
         "print(list2)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,13 +154,40 @@
         "list7 = len(list1)\n",
         "print(list7)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6S1aOxdMb2IT",
+        "outputId": "af1dad3a-c4d6-4e7a-8fd5-ecbf9c4e40e6"
+      },
+      "source": [
+        "8.\n",
+        "import random\n",
+        "list1 = [3,5,7,34,89,65,23,56]\n",
+        "list8 = random.choices(list1, k=3)\n",
+        "print (list8)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[34, 56, 65]\n"
           ]
         }
       ]
@@ -181,39 +208,13 @@
         "list9 = list1 + list2\n",
         "print(list9)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[3, 5, 7, 34, 89, 65, 23, 56, 23, 47, 64, 55, 86]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6S1aOxdMb2IT",
-        "outputId": "d5a04900-c5e7-40d9-f8cf-a46d1f9c5b01"
-      },
-      "source": [
-        "8.\n",
-        "list1 = [3,5,7,34,89,65,23,56]\n",
-        "list8 = random.choice(list1)\n",
-        "print (list8)"
-      ],
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "65\n"
           ]
         }
       ]
