Được tạo bằng Colaboratory

--- a/Thap_HaNoi.ipynb
+++ b/Thap_HaNoi.ipynb
@@ -6,7 +6,7 @@
       "name": "Thap HaNoi.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPE+p/GL1TXZBIgZf2fAeRM",
+      "authorship_tag": "ABX9TyNE9QKjb5C5Yrs20Py3f43D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,6 +62,37 @@
         "  print(\"chuyen banh \", n, \" tu\", k1, \"sang \", k3)\n",
         "  HALOI(n-1, k3,k2,k1)\n",
         "HALOI(3,'k1','k2','k3')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def uscln(a, b):\n",
+        "    if (b == 0):\n",
+        "        return a;\n",
+        "    return uscln(b, a % b)\n",
+        "    \n",
+        "uscln(20,25)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RmZ-gpj5_X3P",
+        "outputId": "82347e31-d63b-494f-ef15-e8db356b2279"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
       ]
     }
   ]
