--- a/BaiTap_NumPy_2.ipynb
+++ b/BaiTap_NumPy_2.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "BaiTap_NumPy_2.ipynb",
+      "name": " BaiTap_NumPy_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -35,7 +35,7 @@
       "metadata": {
         "id": "9TyUA4TfKCXz"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "id": "DrojKmfeJogh",
         "outputId": "3b237225-cea3-4b1f-a682-828537ee9240"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "id": "oxxQex3nKRd-",
         "outputId": "89af40b9-7cc3-489c-f3db-c8ecbe8483a2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "UHmBygKCKmQz",
         "outputId": "75b2a4f1-d6aa-4637-ad27-046105a8b710"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "id": "EsFyFtucMUrd",
         "outputId": "4ceec6ae-02b4-4288-81cd-61004a48297d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
         "id": "eiRNAlOkNPCd",
         "outputId": "616670cd-06ad-4b7d-ee87-ada2ef097d76"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +265,7 @@
         "id": "RKw4bJ8GNtvu",
         "outputId": "8047273b-aac2-403d-f4bf-3957e446c702"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +363,7 @@
         "id": "m4ILP0FnOkDf",
         "outputId": "efe4f914-5925-4839-f03b-89ba40f0289a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "id": "EU_aD1CcPp4n",
         "outputId": "3cc417ec-48f8-43a2-aac8-d3e05a94bccb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
         "id": "VDsptuZrQVWw",
         "outputId": "ca5a2a56-1607-4a8f-e805-cf31fb67eae1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +525,7 @@
         "id": "MlcxO92vQtnJ",
         "outputId": "f19be2db-1056-444b-d1d3-0910efea9801"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +586,7 @@
         "id": "GMUMJLYYRtq7",
         "outputId": "c1fc04a1-0e8f-4d98-c533-60be397a0dcf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +648,7 @@
         "id": "Tsw-ES8eVX31",
         "outputId": "c3083077-4a1c-411a-9230-4c10b53d6e70"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,7 +687,7 @@
         "value_list = []\n",
         " \n",
         "for i in range(m):\n",
-        "    print(f\"-------Phương trình {i+1}------\")\n",
+        "    print(f\"equation {i+1}\")\n",
         "    for y in range(n):\n",
         "        temp1 = float(input(f\"x[{i+1}][{y+1}] = \"))\n",
         "        index_list.append(temp1)\n",
@@ -715,7 +715,7 @@
         },
         "outputId": "5dfc0df5-ae85-4bf2-f42e-1e880dbd66c2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
