--- a/BaiTap_NumPy_3.ipynb
+++ b/BaiTap_NumPy_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaiTap_NumPy_3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+cDjuiHmLD4q/pERZ0so9",
+      "authorship_tag": "ABX9TyPfn6JUduQvRojRzkI9lLyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,7 @@
       "source": [
         "def GTLN(vec_a):\n",
         "  return np.max(vec_a)\n",
-        "print(\"Tap GTLN cua hang: \\n\", np.apply_along_axis(GTLN, 1,A))"
+        "print(\"GTLN: \\n\", np.apply_along_axis(GTLN, 1,A))"
       ],
       "metadata": {
         "colab": {
@@ -164,7 +164,7 @@
       "source": [
         "def GTNN(vec_b):\n",
         "  return np.min(vec_b)\n",
-        "print(\"Tap GTNN cua hang: \\n\", np.apply_along_axis(GTNN, 0,A))"
+        "print(\"GTNN: \\n\", np.apply_along_axis(GTNN, 0,A))"
       ],
       "metadata": {
         "colab": {
@@ -201,7 +201,7 @@
       "source": [
         "def Tong(vec_c):\n",
         "  return np.sum(vec_c)\n",
-        "print(\"Tap Tong cua hang: \\n\", np.apply_along_axis(Tong, 1,A))"
+        "print(\"Tong: \\n\", np.apply_along_axis(Tong, 1,A))"
       ],
       "metadata": {
         "colab": {
@@ -243,7 +243,7 @@
         "    if (i % 2 !=0):\n",
         "      s += vec_d[i]\n",
         "  return s\n",
-        "print(\"Tap cac tong gtri cos index le cua hang: \\n\", np.apply_along_axis(TongCong, 1,A))"
+        "print(\"list tong gia tri le cua hang: \\n\", np.apply_along_axis(TongCong, 1,A))"
       ],
       "metadata": {
         "colab": {
