--- a/BaiTap_NumPy_3.ipynb
+++ b/BaiTap_NumPy_3.ipynb
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8Ldl96n4lN0X",
-        "outputId": "57a16f4f-01d6-4342-80b6-8f2692b72e9e"
+        "outputId": "62bc7a3b-2dc8-4143-a1ad-2022abc2c5c4"
       },
       "execution_count": 2,
       "outputs": [
@@ -92,21 +92,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 8 13 19  6 21  3 29 29  1 29  8 12  8 17 17 26 13]\n",
-            " [27 27 28  4 18 23 27 12 17  0 18  6 12 29 17  8  5]\n",
-            " [ 3  4  1 26 20  3 18 13 12 24  9  0  6 27 13  0 13]\n",
-            " [26  2 12 20 20 10 26 10 15 25 25  4 20 13 20  5 22]\n",
-            " [ 9 28 14  6 23  2 21 25 29 28  8 11 26 20 19  1 24]\n",
-            " [17 17  7 27 11 27 13 10 22  0 11 22 19  4  4 23 13]\n",
-            " [22 28 11 20 27 11  9  2 14 20  4 13  6  6 25 14 10]\n",
-            " [13  2 21  0  3  2 15 21 27 10 24 28 21  6 12 28 11]\n",
-            " [ 9 22 13 22 24  4  1  7 21 20  6 13 29 20 28  0 29]\n",
-            " [29 25 23 29 23 19 14  9 21  9 22  6  7 10  4 15 23]\n",
-            " [24 26  5  6 12 13  1 13  4 15  8  5  4  9 28  8  1]\n",
-            " [10  6 13 24  7 25 27  7 13 25 29 14 22  3 20  3  5]\n",
-            " [12 19  5 25 26 15  1 21  0 29 10 18 29 15  6  1  4]\n",
-            " [20 24 12 27  4  0 27  7 20  9  2  3 15  9 17 26  9]\n",
-            " [19 18 26 12  5 22  3 24 15 28  4 29 10  5  7 26 12]]\n"
+            "[[17 20 29 24 26 11 13  4 20 11  9 24 26 27 22 21 17]\n",
+            " [ 8 10 20  5 20 19 23 22 28 17 19  9 28 29  8  2 14]\n",
+            " [ 1 24  3 20 20 15  5 14 10 17 27  2  3  3 16  3  2]\n",
+            " [ 2 22 14 10 21 21 28 10 28  1  0 20  8 29 14  3 12]\n",
+            " [20 22 12 11  0  4  1  1 27 13 11  4 22  3 18 28  0]\n",
+            " [ 5  8 25 15  6  1 24 13 14 25 26  7 22 19 20 22  5]\n",
+            " [27 15 24 15 15 13  5  2 19  1 18 19  6 19 15 24 12]\n",
+            " [ 2  2 28 17 23 17 26 17  6 12 19 14  7  8 16 28 14]\n",
+            " [ 2 15  7  7 26 26  3  7 10  5 17 22  4 18 29  8  7]\n",
+            " [ 7 28 16 10 16  9 27 24 12  8 17 27 28  7 18  4 18]\n",
+            " [ 4 20 20 29  7 17  9 26 16  5 10  4 14 25 10  3 20]\n",
+            " [21 17  9 22 19 13 25  4 24  8 25  5 10 22  5  0 11]\n",
+            " [ 8  5  3 22  6  4  1  4 22 22 24 15 22 23 16 26  8]\n",
+            " [22 14 21 21 12 26 29 23 11 28 11  1 27  5  9 24 12]\n",
+            " [12 13 25 15  9 24  6 10 23 16 15 10 13  7 22 15  0]]\n"
           ]
         }
       ]
@@ -134,16 +134,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FdYi2DvKlmPj",
-        "outputId": "f7cf727c-9124-4fe1-f76c-59436e3146cb"
+        "outputId": "8e77bef7-70fc-4c4e-e6f1-4f193b2cba31"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tap GTLN cua hang: \n",
-            " [18 19 19 18 17 19 17 19 16 17 19 17 19 19 15]\n"
+            "GTLN: \n",
+            " [29 29 27 29 28 26 27 28 29 28 29 25 26 29 25]\n"
           ]
         }
       ]
@@ -171,16 +171,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KGfJXH9SmS-W",
-        "outputId": "3dc254b9-4e2d-49a3-ed77-78adc1c357f9"
+        "outputId": "5691fee9-ed1e-4861-9191-6a0667ebc814"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tap GTNN cua hang: \n",
-            " [0 0 3 4 1 1 3 0 1 0 2 0 0 0 1 0 0]\n"
+            "GTNN: \n",
+            " [1 2 3 5 0 1 1 1 6 1 0 1 3 3 5 0 0]\n"
           ]
         }
       ]
@@ -208,16 +208,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xczj47Zemrd4",
-        "outputId": "53ee66fa-85fb-41de-c10f-21bfb001eda3"
+        "outputId": "d893c596-dbba-46c6-cee2-8a4d26e86bed"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tap Tong cua hang: \n",
-            " [190 186 175 157 133 176 176 203 145 137 164 101 180 208 144]\n"
+            "Tong: \n",
+            " [321 281 185 243 197 257 249 256 213 276 239 240 231 296 235]\n"
           ]
         }
       ]
@@ -250,16 +250,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IDKTuUd0nGdw",
-        "outputId": "8b49f072-a2d8-4fd0-fbf7-e8e31bce8409"
+        "outputId": "0218ced3-743f-422b-bbe4-36765bf86e82"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tap cac tong gtri cos index le cua hang: \n",
-            " [ 85 105  92  88  49  69  71  89  77  54  72  41  83  85  71]\n"
+            "list tong gia tri le cua hang: \n",
+            " [142 113  98 116  86 110 108 115 108 117 129  91 121 142 110]\n"
           ]
         }
       ]
