--- a/BaiTap_NumPy_4.ipynb
+++ b/BaiTap_NumPy_4.ipynb
@@ -35,7 +35,7 @@
       "metadata": {
         "id": "ldzht1asCxs4"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -57,16 +57,16 @@
       "source": [
         "def infor(vec_x):\n",
         "  print(\"Vector x: \",vec_x)\n",
-        "  print(\"Số chiều của x: \", vec_x.ndim)\n",
-        "  print(\"Kích thước của x: \", vec_x.shape)\n",
-        "  print(\"Vector chuyển vị của x: \\n\", vec_x.T)\n",
-        "  print(\"Số chiều của vector chuyển vị của x: \", (vec_x.T).ndim)\n",
-        "  print(\"Kích thước của chuyển vị của x: \", vec_x.T.shape)"
+        "  print(\"Dimensions of x: \", vec_x.ndim)\n",
+        "  print(\"The size of the x: \", vec_x.shape)\n",
+        "  print(\"The displacement vector of x: \\n\", vec_x.T)\n",
+        "  print(\"The number of dimensions of the displacement vector of  x: \", (vec_x.T).ndim)\n",
+        "  print(\"Dimensions of displacement of x: \", vec_x.T.shape)"
       ],
       "metadata": {
         "id": "EXQnWwNZFphY"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -90,48 +90,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kbt8dANwC0og",
-        "outputId": "b5ec0e1e-8340-4e49-f244-86318fa18b25"
+        "outputId": "737acb1c-18c0-4ac9-eebb-5fcde41ae04c"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Vector x:  [0 1 2 3 4 5 6]\n",
-            "Số chiều của x:  1\n",
-            "Kích thước của x:  (7,)\n",
-            "Vector chuyển vị của x: \n",
+            "Dimensions of x:  1\n",
+            "The size of the x:  (7,)\n",
+            "The displacement vector of x: \n",
             " [0 1 2 3 4 5 6]\n",
-            "Số chiều của vector chuyển vị của x:  1\n",
-            "Kích thước của chuyển vị của x:  (7,)\n",
+            "The number of dimensions of the displacement vector of  x:  1\n",
+            "Dimensions of displacement of x:  (7,)\n",
             "Vector x:  [ 0.          1.66666667  3.33333333  5.          6.66666667  8.33333333\n",
             " 10.        ]\n",
-            "Số chiều của x:  1\n",
-            "Kích thước của x:  (7,)\n",
-            "Vector chuyển vị của x: \n",
+            "Dimensions of x:  1\n",
+            "The size of the x:  (7,)\n",
+            "The displacement vector of x: \n",
             " [ 0.          1.66666667  3.33333333  5.          6.66666667  8.33333333\n",
             " 10.        ]\n",
-            "Số chiều của vector chuyển vị của x:  1\n",
-            "Kích thước của chuyển vị của x:  (7,)\n",
+            "The number of dimensions of the displacement vector of  x:  1\n",
+            "Dimensions of displacement of x:  (7,)\n",
             "Vector x:  [ 10.          14.67799268  21.5443469   31.6227766   46.41588834\n",
             "  68.12920691 100.        ]\n",
-            "Số chiều của x:  1\n",
-            "Kích thước của x:  (7,)\n",
-            "Vector chuyển vị của x: \n",
+            "Dimensions of x:  1\n",
+            "The size of the x:  (7,)\n",
+            "The displacement vector of x: \n",
             " [ 10.          14.67799268  21.5443469   31.6227766   46.41588834\n",
             "  68.12920691 100.        ]\n",
-            "Số chiều của vector chuyển vị của x:  1\n",
-            "Kích thước của chuyển vị của x:  (7,)\n",
-            "Vector x:  [0.83888905 0.83655119 0.22457301 0.20148113 0.89136374 0.50913822\n",
-            " 0.705051  ]\n",
-            "Số chiều của x:  1\n",
-            "Kích thước của x:  (7,)\n",
-            "Vector chuyển vị của x: \n",
-            " [0.83888905 0.83655119 0.22457301 0.20148113 0.89136374 0.50913822\n",
-            " 0.705051  ]\n",
-            "Số chiều của vector chuyển vị của x:  1\n",
-            "Kích thước của chuyển vị của x:  (7,)\n"
+            "The number of dimensions of the displacement vector of  x:  1\n",
+            "Dimensions of displacement of x:  (7,)\n",
+            "Vector x:  [0.08974864 0.83803314 0.07572003 0.07037846 0.91866523 0.05684069\n",
+            " 0.53142862]\n",
+            "Dimensions of x:  1\n",
+            "The size of the x:  (7,)\n",
+            "The displacement vector of x: \n",
+            " [0.08974864 0.83803314 0.07572003 0.07037846 0.91866523 0.05684069\n",
+            " 0.53142862]\n",
+            "The number of dimensions of the displacement vector of  x:  1\n",
+            "Dimensions of displacement of x:  (7,)\n"
           ]
         }
       ]
@@ -154,16 +154,16 @@
       "cell_type": "code",
       "source": [
         "def OpR(matrix_x):\n",
-        "  print(\"Ma trận x: \\n\", matrix_x)\n",
-        "  print(\"Số chiều của x: \", matrix_x.ndim)\n",
-        "  print(\"Ma trận chuyển vị của x: \\n\", matrix_x.T)\n",
-        "  print(\"Số chiều của chuyển vị của x: \", (matrix_x.T).ndim)\n",
-        "  print(\"Kích thước của chuyển vị của x: \", (matrix_x.T).shape)"
+        "  print(\"Matrix x: \\n\", matrix_x)\n",
+        "  print(\"Dimensions of x: \", matrix_x.ndim)\n",
+        "  print(\"Transpose matrix of x: \\n\", matrix_x.T)\n",
+        "  print(\"Dimensions of displacement of x: \", (matrix_x.T).ndim)\n",
+        "  print(\"Dimensions of displacement of x: \", (matrix_x.T).shape)"
       ],
       "metadata": {
         "id": "fW7Mm6RA49wZ"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
         "id": "Jn_6xWn25xia",
         "outputId": "6f0e43e2-64dc-4660-aeb7-73fdde6641e5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +226,7 @@
         "id": "kGr6fyRf6HpG",
         "outputId": "3aa6dfb3-0e29-4203-99a3-83c8d3d3e7d7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         "id": "3HVxWFRr6oCr",
         "outputId": "ac6b546c-2435-464f-9f23-36372c459fbf"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +335,7 @@
         "id": "XsN1nFW66zta",
         "outputId": "e300ebe7-240e-4f50-ba72-3aca0646b585"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
         "id": "n1IyU_7i91fk",
         "outputId": "1f9ca102-e8b5-4ddd-f783-22ddd4ec5b19"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
         "id": "XRmMmMA--hGX",
         "outputId": "018c766d-1e1a-402a-dfa8-50eaca5bc97d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
         "id": "Y1I_y5_p-3O1",
         "outputId": "f96dacf2-931e-421a-f406-ae7b844eb7b3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "cnEZWik5Arh0"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "tk6MqGdMBHYB"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,17 +613,8 @@
       "metadata": {
         "id": "M4wuU-1CEiil"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- Xây dựng hàm tính phương sai:"
-      ],
-      "metadata": {
-        "id": "37rwRPruLFtV"
-      }
     },
     {
       "cell_type": "code",
@@ -639,7 +630,7 @@
       "metadata": {
         "id": "SVh3kXfZLHld"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,17 +643,8 @@
       "metadata": {
         "id": "ei0ybWZUL2MA"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- Hãy tạo ra ma trận A15x10 với các giá trị sinh bởi hàm arrange():"
-      ],
-      "metadata": {
-        "id": "AB8rANgfMUD6"
-      }
     },
     {
       "cell_type": "code",
@@ -677,7 +659,7 @@
         "id": "xlnkZXzUMWTh",
         "outputId": "d8d5f312-de87-447e-a433-add0d495da93"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +707,7 @@
         "id": "r18eh42IuSqT",
         "outputId": "3992caa1-c5ba-4c92-892f-e448fa801cd6"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +743,7 @@
         "id": "YCfGdCt6uW4b",
         "outputId": "da8efc24-6038-4caa-de7e-a52b01934b2f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +779,7 @@
         "id": "_p_DFaE6uaEi",
         "outputId": "6bd330f8-6749-4e5e-cd82-0f04ce0aeaf4"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +828,7 @@
         "id": "GmrNdLcxucSi",
         "outputId": "ae7a8b11-13e9-4aa8-dd0a-ff23e5f52b9d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +864,7 @@
         "id": "2uD_gifeugFv",
         "outputId": "35b619bb-ac25-4e32-bd39-7d811623b5f4"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +909,7 @@
         "id": "rNYynZuEQR4C",
         "outputId": "e476b0d8-1eb1-4df9-d689-094cd7a10de3"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +936,7 @@
         "id": "plhMqFP9QTmZ",
         "outputId": "5d867f6b-6df7-4120-a0a2-b2e0bbef377a"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,7 +963,7 @@
         "id": "O7plJRDNQU5a",
         "outputId": "f8ec017f-bdd3-4a42-b393-7ecd881a38ad"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,7 +1004,7 @@
         "id": "k121TumBQWr-",
         "outputId": "69c91b61-f1a0-48ea-fa11-faf86c5234f7"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1051,7 +1033,7 @@
         "id": "S-Dujip7QYy6",
         "outputId": "9b780e8c-a102-4f08-cae8-3c7e0d69ed02"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
