--- a/Kiểm_định_AB.ipynb
+++ b/Kiểm_định_AB.ipynb
@@ -115,7 +115,16 @@
       "source": [
         "Trả lời tại đây\n",
         "\n",
-        "1."
+        "1. Kiểm định giả thuyết hay kiểm định ý nghĩa, là phương pháp phổ biến trong phân tích thống kê truyền thống. Kiểm định giả thuyết được sử dụng để đánh giá tính hợp lý của giả thuyết bằng cách sử dụng dữ liệu mẫu.\n",
+        "2. Giả thuyết rỗng (hay vô hiệu) là một loại phỏng đoán trong thống kê đề xuất rằng không có sự khác biệt giữa các đặc điểm nhất định của một quần thể hoặc quá trình tạo dữ liệu. ( Hoặc không tồn tại ý nghĩa thống kê trong một tập hợp các dữ liệu đã cho)\n",
+        "\n",
+        "  Giả thuyết vô hiệu chỉ có thể bị bác bỏ, không được chứng minh.\n",
+        "  * VD: Hiệu trưởng một trường học tuyên bố rằng học sinh trong trường của cô ấy đạt điểm trung bình là 7 trên 10 trong các kỳ thi. Vậy giả thuyết vô hiệu là trung bình dân số là 7,0.\n",
+        "3. Giả thuyết thay thế đề xuất rằng có sự khác biệt so với gải thuyết rỗng.\n",
+        "  * VD: Lấy ví dụ ở trên, giả thuyết thay thế sẽ là:\n",
+        "\n",
+        "    - Học sinh đạt điểm trung bình  không  bằng 7.\n",
+        "4. *italicized text*"
       ],
       "metadata": {
         "id": "xZHLM-16guTL"
