--- a/Kiểm_định_AB.ipynb
+++ b/Kiểm_định_AB.ipynb
@@ -124,7 +124,10 @@
         "  * VD: Lấy ví dụ ở trên, giả thuyết thay thế sẽ là:\n",
         "\n",
         "    - Học sinh đạt điểm trung bình  không  bằng 7.\n",
-        "4. *italicized text*"
+        "4. Kiểm định 1 chiều (1 đuôi) là kiểm định giả thuyết thống kê được thiết lập để chỉ ra rằng trung bình mẫu sẽ cao hơn hoặc thấp hơn trung bình tổng thể (chỉ một trong hai).\n",
+        "5. Kiểm tra 2 chiều (2 đuôi) là phương pháp trong đó vùng tới hạn của phân bố là hai phía và kiểm tra xem một mẫu lớn hơn hay nhỏ hơn một dải giá trị.\n",
+        "Kiểm tra 2 đuôi được sử dụng trong kiểm tra giả thuyết không và kiểm tra ý nghĩa thống kê.\n",
+        "6. Kiểm định hai \bchiều sử dụng để cho biết giá trị trung bình của mẫu có lớn hơn và nhỏ hơn đáng kể so với giá trị trung bình của một tổng thể hay không. Kiểm định một đuôi được sử dụng để chỉ ra rằng trung bình mẫu sẽ cao hơn hoặc thấp hơn trung bình tổng thể."
       ],
       "metadata": {
         "id": "xZHLM-16guTL"
@@ -149,7 +152,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Trả lời tại đây"
+        "1. Sampling là quá trình lấy mẫu hay lấy một lượng cá thể từ một quần thể nhất định bằng các phương pháp bao gồm lấy mẫu ngẫu nhiên, lấy mẫu khối, lấy mẫu phán đoán và lấy mẫu hệ thống.\n",
+        "2. Resampling là phương pháp sử dụng một cách hợp lý dữ liệu mẫu để cải thiện độ chính xác và kiểm tra độ không đảm bảo của một tham số tổng thể.\n",
+        "3. Kiểm tra hoán vị (hay gọi là kiểm tra chính xác, kiểm tra ngẫu nhiên hoặc kiểm tra lại ngẫu nhiên) là quy trình kiểm tra phi tham số để kiểm tra giả thuyết rỗng rằng hai nhóm khác nhau đến từ cùng một phân phối."
       ],
       "metadata": {
         "id": "HyDM-nFEiLW9"
@@ -157,13 +162,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "AQEZUA1Eb1Fq"
+        "id": "AQEZUA1Eb1Fq",
+        "outputId": "20f4a33e-d49a-4b0f-d504-1bcea9ee9e77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0066\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "#Kiểm tra ngẫu nhiên hai phía\n",
+        "treatment = [ 28.44,  29.32,  31.22,  29.58,  30.34,  28.76,  29.21,  30.4 ,\n",
+        "              31.12,  31.78,  27.58,  31.57,  30.73,  30.43,  30.31,  30.32,\n",
+        "              29.18,  29.52,  29.22,  30.56]\n",
+        "control = [ 33.51,  30.63,  32.38,  32.52,  29.41,  30.93,  49.78,  28.96,\n",
+        "            35.77,  31.42,  30.76,  30.6 ,  23.64,  30.54,  47.78,  31.98,\n",
+        "            34.52,  32.42,  31.32,  40.72]\n",
+        "from mlxtend.evaluate import permutation_test\n",
+        "\n",
+        "p_value = permutation_test(treatment, control,\n",
+        "                           method='approximate',\n",
+        "                           num_rounds=10000,\n",
+        "                           seed=0)\n",
+        "print(p_value)\n",
+        "#0.0066993300669933005\n",
+        "#Vì p-value <alpha, chúng ta có thể bác bỏ giả thuyết rỗng rằng hai mẫu đến từ cùng một phân phối."
       ]
     }
   ]
